force-app/main/default/objects/Timecard__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <formula>LPAD(TEXT(FLOOR(Effort__c)),2,&apos;0&apos;) 
+&quot;:&quot;+
LPAD(TEXT((Effort__c - FLOOR(Effort__c))*60),2,&apos;0&apos;)</formula>
    <label>Actual Hours</label>
    <type>Text</type>
</CustomField>