force-app/main/default/objects/Timecard__c/fields/ClickUp_Time_Id__c.field-meta.xml
<CustomField>
    <fullName>ClickUp_Time_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ClickUp Time Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>