force-app/main/default/objects/Timecard__c/fields/Effort_with_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Effort_with_Coefficient__c</fullName>
    <label>Effort (with Coefficient)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>