force-app/main/default/objects/Timecard__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <formula>IF(Effort_with_Coefficient__c &gt; 0, Effort_with_Coefficient__c, Effort__c) * Project_Rate__c * (1 - Project_Tax_Rate__c - Project_Commission_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>