force-app/main/default/objects/Timecard__c/fields/Estimated_Revenue_w_Currency_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue_w_Currency_Exchange__c</fullName>
    <formula>(Effort__c * Project_Rate__c) - (Effort__c * Project_Rate__c * Project_Tax_Rate__c) - (Effort__c * Project_Rate__c * Project_Commission_Rate__c) - (Effort__c * Project_Rate__c * 0.01) 
- ((Effort__c * Project_Rate__c) - (Effort__c * Project_Rate__c * 0.01)) * 0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Revenue w/ Currency Exchange</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>