force-app/main/default/objects/Timecard__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Timecards</relationshipLabel>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>