force-app/main/default/objects/Timecard__c/fields/Litify_Client__c.field-meta.xml
<CustomField>
    <fullName>Litify_Client__c</fullName>
    <formula>&apos;Litify&apos;</formula>
    <label>Litify Client</label>
    <type>Text</type>
</CustomField>