force-app/main/default/objects/Timecard__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This contact is inactive.</errorMessage>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Propeller Plan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timecards</relationshipLabel>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>