force-app/main/default/objects/Timecard__c/fields/Project_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Rate__c</fullName>
    <description>Rate value that is taken from the Project</description>
    <formula>Case__r.Project__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rate value that is taken from the Project</inlineHelpText>
    <label>Project Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>