force-app/main/default/objects/Timecard__c/fields/Project_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Tax_Rate__c</fullName>
    <description>Tax Rate value that is taken from the Project</description>
    <formula>Case__r.Project__r.Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tax Rate value that is taken from the Project</inlineHelpText>
    <label>Project Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>