force-app/main/default/objects/Timecard__c/fields/Reporter_Person__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Person__c</fullName>
    <description>Field is used for reports that are sent to Clients in order to replace Interns with Employees</description>
    <formula>IF(
OR(
CONTAINS(Person__r.FirstName, &quot;Kirill&quot;),
CONTAINS(Person__r.LastName, &quot; PL&quot;)),
&quot;Sergey&quot;,
Person__r.FirstName)</formula>
    <inlineHelpText>Field is used for reports that are sent to Clients in order to replace Interns with Employees</inlineHelpText>
    <label>Reporter Person</label>
    <type>Text</type>
</CustomField>