force-app/main/default/objects/Timecard__c/fields/Work_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Work_Date_Year__c</fullName>
    <formula>TEXT(YEAR( Work_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Date Year</label>
    <type>Text</type>
</CustomField>