force-app/main/default/objects/Timecard__c/listViews/Current_Month.listView-meta.xml
<ListView>
    <fullName>Current_Month</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Effort__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Current Month</label>
</ListView>