force-app/main/default/objects/Timecard__c/listViews/Timecards_Today.listView-meta.xml
<ListView>
    <fullName>Timecards_Today</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Effort__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Timecards Today</label>
</ListView>