force-app/main/default/objects/Timecard__c/listViews/Vlad_s_timecards.listView-meta.xml
<ListView>
    <fullName>Vlad_s_timecards</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Effort__c</columns>
    <columns>Work_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Person__c</field>
        <operation>contains</operation>
        <value>Vlad Lipen</value>
    </filters>
    <filters>
        <field>Work_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Vlad&apos;s timecards</label>
</ListView>