force-app/main/default/objects/Timecard__c/listViews/Yarik_s_timecards.listView-meta.xml
<ListView>
    <fullName>Yarik_s_timecards</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Effort__c</columns>
    <columns>Work_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Person__c</field>
        <operation>contains</operation>
        <value>Yarik</value>
    </filters>
    <label>Yarik&apos;s timecards</label>
</ListView>