force-app/main/default/objects/Timecard__c/listViews/Yesterday.listView-meta.xml
<ListView>
    <fullName>Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Project__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Effort__c</columns>
    <columns>Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday</label>
</ListView>